# wati_technical_test

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/wati_agent/: __init__.py
src/wati_agent/agent/: executor.py  memory.py  orchestrator.py  planner.py  validator.py
src/wati_agent/app/: __init__.py  cli.py  config.py
src/wati_agent/domain/: __init__.py  models.py  schemas.py
src/wati_agent/integrations/: __init__.py
src/wati_agent/integrations/wati/: __init__.py  base_client.py  factory.py  mock_client.py  real_client.py
src/wati_agent/llm/: __init__.py  base.py  factory.py  ollama_provider.py  openai_provider.py
src/wati_agent/mock_api/: __init__.py  data.py  main.py
src/wati_agent/mock_api/routes/: __init__.py  broadcasts.py  contacts.py  messages.py  operators.py  tags.py  templates.py  tickets.py
tests/: __init__.py  test_step_10_scenarios.py
